fix(ui): fix font face declaration on mobile

--- a/src/ui/styles/text.css
+++ b/src/ui/styles/text.css
@@ -1,9 +1,13 @@
-@font-face {
-  font-family: 'Montserrat';
-  src:
-    url('/fonts/Montserrat-VariableFont_wght.ttf') format('truetype') tech('variations'),
-    url('/fonts/Montserrat-VariableFont_wght.ttf') format('truetype-variations');
-  font-weight: 100 900;
-  font-style: normal;
-  font-display: swap;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'Montserrat';
+    src: url('/fonts/Montserrat-VariableFont_wght.ttf') format('truetype-variations');
+    font-weight: 100 900;
+    font-style: normal;
+    font-display: swap;
+  }
 }
